--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 
     <mat-toolbar color="Secondary">
-      <span>EMPLOYEE MANAGEMENT SYSTEM</span>
+      <span align-items: center>EMPLOYEE MANAGEMENT SYSTEM</span>
       <span class="example-spacer"></span>
       <button mat-raised-button (click)="empcrudForm()">
         ADD EMPLOYEE
