--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,11 @@
 
     <mat-toolbar color="Secondary">
-      <span align-items: center>EMPLOYEE MANAGEMENT SYSTEM</span>
+        <span class="justify-content-center">EMPLOYEE MANAGEMENT SYSTEM</span>
       <span class="example-spacer"></span>
       <button mat-raised-button (click)="empcrudForm()">
         ADD EMPLOYEE
       </button>
     </mat-toolbar>
-
     <div class="mat-elevation-z8">
       <div class="table-container">
       <table mat-table [dataSource]="dataSource" matSort>
