--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,8 +2,11 @@
     flex: 1 1 auto;
 }
 .delete{
-    color: red;
+    color: rgb(123, 255, 0);
 }
 mat-toolbar{
     background-color: chocolate;
+}
+.justify-content-center{
+    padding-left: 500px;
 }
